# server

./: .gitignore  LICENSE  README.md  server.cabal  stack.yaml
src/: FileSystem.hs  Html.hs  Main.hs  Utils.hs
src/FileSystem/: Directory.hs
src/Server/: Connection.hs  Handler.hs  Headers.hs  Http.hs
templates/: base.html  directoryEntries.html  directoryEntry.html  fileContent.html  fileEntry.html  headerTable.html  headerTableRow.html
