name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable server
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5,
                       containers >= 0.5.10 && < 0.6,
                       network-uri >= 2.6, network >= 2.6,
                       bytestring >= 0.10.8 && < 0.11,
                       text >= 1.2 && < 1.3,
                       memory >= 0.14,
                       split >= 0.2,
                       ghc >= 8 && < 9
  other-modules:       Server.Connection
                       Server.Headers
                       Server.Handler
                       Server.Http
                       FileSystem.Directory
